# cpptasks

./: MPIDoubleIntegral.c  README.md
App_OpenGL/: App_OpenGL.sln
App_OpenGL/App_OpenGL/: App_OpenGL.vcxproj  Source.cpp
App_OpenGL/Debug/: App_OpenGL.ilk
App_OpenGL/Release/: App_OpenGL.iobj  App_OpenGL.ipdb
C_parallel_integral_task/: NoParallelIntegral.h  ParallelIntegral.h  TaskIntegrals.c  a.out
CppWebServer/src/: main.cpp
CudaProJect/: CudaProJect.sln
CudaProJect/CudaProJect/: CudaProJect.vcxproj  kernel.cu
GaussinLinearEquationsSolver/: GaussinLinearEquationsSolver.sln
GpGPU_vs_CPU/: 123.sln
GpGPU_vs_CPU/123/: 123.vcxproj  kernel.cu
GraphicsEngine/: CMakeLists.txt  Vector3D.cpp  Vector3D.hpp  main.cpp
GraphingWorks/: GraphingWorks.sln
KartonGraphingWorks/: CppServer.vcxproj  WindowApiGraphics.sln
OMP_exp/: CMakeLists.txt  main.c
RLesson10(cutted as int)/: RLesson10.sln
RLesson11(DoubleLinkedList)/: DoubleLinkedList.sln
RLesson11(Queue)/: RLesson11(Queue).sln
RLesson11(Stack)/: RLesson11(Stack).sln
RLesson12/: RLesson12.sln
RLesson5/: RLesson5.sln
RLesson8/: RLesson8.sln
RLesson9/: RLesson9.sln
RThreadRunnable2/: Project3Fun.vcxproj  Project3Fun.vcxproj.filters  ThreadRunnable2.sln  main.cpp  main.h
Rlesson11/: Rlesson11.sln
Rlesson11(cutted)/: Rlesson11(cutted).sln
Rlesson6/: Rlesson6.sln
Rlesson7/: Rlesson7.sln
STL17/: STL17.sln
SfmlGraphing/: main.cpp  sfml-app
Task7.S/: Task7.S.sln
integraltask/: NoParallelIntegral.h  ParallelIntegral.h  TaskIntegrals.c  a.out
task7/: task7.sln
task7.11/: task7.11.sln
(+373 files in other folders)
